--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,7 @@ dependencies = [
     "markdownify>=0.11.0",
     "readabilipy>=0.2.0",
     "readability-lxml>=0.8.1",
-    "lxml_html_clean"
+    "lxml_html_clean",
+    "selenium>=4.15.0",
+    "webdriver-manager>=4.0.0"
 ]
